<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/etLogin"
        android:hint="@string/login"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/log_in"
            android:textSize="20sp"
            android:id="@+id/btnLogin"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cont"
            android:textSize="20sp"
            android:id="@+id/btnContinue"/>
    </LinearLayout>


</LinearLayout>