<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/spacing_tiny">
        <ImageView
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:layout_marginRight="@dimen/spacing_tiny"
            android:id="@+id/imv_avatar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_more_large"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_dates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_questions"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:text="@string/birth_place"/>
            <TextView
                android:id="@+id/tv_birth_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_questions"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:text="@string/homepage"/>
            <TextView
                android:id="@+id/tv_homepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_questions"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_biography"
        android:textSize="@dimen/text_size_questions"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/spacing_tiny"
        android:layout_marginTop="@dimen/spacing_small"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/known_for"
        android:textSize="@dimen/text_size_large"
        android:layout_marginLeft="@dimen/spacing_tiny"
        android:textColor="@color/black"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rv_known_for"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photos"
        android:textSize="@dimen/text_size_large"
        android:layout_marginLeft="@dimen/spacing_tiny"
        android:textColor="@color/black"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rv_photos"/>
    </LinearLayout>
</ScrollView>